Fix slider thumb alignment with transform translateY

--- a/css/guess-rank.css
+++ b/css/guess-rank.css
@@ -108,13 +108,18 @@
 
 .vol-slider {
     flex: 1;
-    height: 6px;
     cursor: pointer;
     -webkit-appearance: none;
     appearance: none;
+    background: transparent;
+    outline: none;
+    height: 16px;
+}
+
+.vol-slider::-webkit-slider-runnable-track {
+    height: 6px;
     background: #333;
     border-radius: 3px;
-    outline: none;
 }
 
 .vol-slider::-webkit-slider-thumb {
@@ -126,7 +131,14 @@
     background: #ff4655;
     cursor: pointer;
     border: none;
-    margin-top: -5px;
+    transform: translateY(-5px);
+}
+
+.vol-slider::-moz-range-track {
+    height: 6px;
+    background: #333;
+    border-radius: 3px;
+    border: none;
 }
 
 .vol-slider::-moz-range-thumb {
@@ -135,19 +147,6 @@
     border-radius: 50%;
     background: #ff4655;
     cursor: pointer;
-    border: none;
-}
-
-.vol-slider::-webkit-slider-runnable-track {
-    height: 6px;
-    background: #333;
-    border-radius: 3px;
-}
-
-.vol-slider::-moz-range-track {
-    height: 6px;
-    background: #333;
-    border-radius: 3px;
     border: none;
 }
 
